added yandex_wm verification

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,7 @@
   {% endspaceless %}
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="{% block meta_robots %}{% endblock %}" />
+  <meta name="yandex-verification" content="f332f936e93cabbb" />
   <link rel="canonical" href="{{ request.scheme }}://{{ request.META.HTTP_HOST }}{% block canonical %}{% endblock %}">
   <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
   <!--[if lt IE 9]>
