--- a/app/static/sass/project.scss
+++ b/app/static/sass/project.scss
@@ -396,3 +396,11 @@ img.dl-example {
   margin-left: .1rem;
   margin-right: .1rem;
 }
+
+.dl-img{
+  padding: 10px;
+}
+
+.dl-img img{
+  border: 1px solid rgba(0, 0, 0, 0.125);
+}
