fixed detail flag tpl

--- a/app/templates/flags/flag-detail.html
+++ b/app/templates/flags/flag-detail.html
@@ -420,7 +420,7 @@
 {% endif %}
 
 {# Same color flags v2 #}
-{% if same_flags|length > 0 %}
+{% if same_flags %}
 <div class="bg-light" id="same-colors">
     {# H2 #}
     {% include "partials/_h2.html" with h2="Флаги с похожими цветами" %}
